--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,12 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${CMAKE_SOURCE_DIR}/dist/${CMAKE_SYSTEM_NAME}>)
 set(ASSETS_DIR_NAME assets)
 
+add_definitions(
+    -c
+    -O3
+    -msse2
+)
+
 add_subdirectory(external/canis)
 
 file(GLOB_RECURSE SRC_SOURCES src/*.c*)
@@ -13,7 +19,6 @@ file(GLOB_RECURSE SRC_HEADERS src/*.h*)
 add_executable(${PROJECT_NAME} ${SRC_SOURCES} ${SRC_HEADERS})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE canis)
-target_include_directories(${PROJECT_NAME} PRIVATE canis)
 
 if (DEFINED ASSETS_DIR_NAME)
     add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
